tests/errors/unexpected-eof/main.pa
# A function body opened with `{` and never closed.
def main = fun {
